# todo-api

./: .gitignore  Dockerfile  Makefile  README.md  appspec.yml  buildspec.yml  docker-compose.yml  pyproject.toml
app/: _logger.py  db.py  main.py  models.py  routers.py  schemas.py
docs/: api_endpoint_check.md  construct_procedure.md
fluent-bit/firelens/: Dockerfile  extra.conf
fluent-bit/local/: fluent-bit.conf  parsers.conf
infra/: alb.tf  autoscaling.tf  backend.tf  code_build.tf  code_deploy.tf  code_pipeline.tf  cognito.tf  ecs.tf  rds.tf  vpc.tf
infra/network/: backend.tf  output.tf  security_group.tf  vpc.tf
infra/todo/: alb.tf  autoscaling.tf  backend.tf  code_deploy.tf  cognito.tf  ecs.tf  output.tf  rds.tf  task_definition.tpl
scripts/: prestart.sh
scripts/init_db/: init.sql
src/: auth.py  main.py  models.py  routers.py  schemas.py
src/tests/: conftest.py  test_models.py  test_routers.py
tests/: conftest.py  test_models.py  test_routers.py
