[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Shun Fukusumi <shun.fukusumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.15.0"
fastapi = "^0.70.0"
asyncpg = "^0.24.0"
fastapi-cloudauth = "^0.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.910"
autopep8 = "^1.6.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
