[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Shun Fukusumi <shun.fukusumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.15.0"
fastapi = "^0.79.0"
asyncpg = "^0.24.0"
fastapi-cloudauth = "^0.4.0"
arrow = "^1.2.2"
python-json-logger = "^2.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-mock = "^3.6.1"
black = "^22.6.0"
isort = "^5.10.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

# flake8 is not supported for pyproject yet
# issue: https://github.com/python/mypy/issues/5205
# [tool.flake8]
# max-line-length = 120
# extend-ignore = E203

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
